applications/mongo-express/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  namespace: quizmeup
  labels:
    app: mongo-express
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
  selector:
    app: mongo-express
---

apiVersion: v1
kind: Service
metadata:
  name: mongo-express-node-port
  namespace: quizmeup
  labels:
    app: mongo-express
spec:
  type: NodePort
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      nodePort: 30008
  selector:
    app: mongo-express
