applications/mongo-express/base/network.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongo-express-network-policy
  namespace: quizmeup
spec:
  podSelector:
    matchLabels:
      app: mongo-express
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from: []  # Permet l'accès depuis n'importe où (ajustez selon vos besoins)
      ports:
        - protocol: TCP
          port: 8081
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: mongo-database
      ports:
        - protocol: TCP
          port: 27017
    - to: []  # Pour les résolutions DNS et autres besoins réseau
      ports:
        - protocol: UDP
          port: 53
